syntax = "proto3";
option go_package = "github.com/auyeongweibin/auth-server/registration";

message UserEnrolledRequest {
    string email = 1;
    string firstName = 2;
    string lastName = 3;
    string birthdate = 4;
}

message UserEnrolledResponse {
    string message = 1;
}

message RegistrationRequest {
    string email = 1;
    string password = 2;
}

message RegistrationResponse {
    string email = 1;
    string message = 2;
}

service Registration {
    rpc Register(RegistrationRequest) returns (RegistrationResponse);
    rpc CheckUserEnrolled(UserEnrolledRequest) returns (UserEnrolledResponse);
}